tests/machine/x/c/list_nested_assign.error
exit status 1
/workspace/mochi/tests/machine/x/c/list_nested_assign.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/list_nested_assign.c:40:33: error: incompatible types when initializing type ‘int *’ using type ‘list_int’
   40 |   list_int matrix_data[] = {{2, tmp1}, {2, tmp2}};
      |                                 ^~~~
/workspace/mochi/tests/machine/x/c/list_nested_assign.c:40:44: error: incompatible types when initializing type ‘int *’ using type ‘list_int’
   40 |   list_int matrix_data[] = {{2, tmp1}, {2, tmp2}};
      |                                            ^~~~
/workspace/mochi/tests/machine/x/c/list_nested_assign.c:42:17: error: redefinition of ‘matrix’
   42 |   list_list_int matrix = matrix;
      |                 ^~~~~~
/workspace/mochi/tests/machine/x/c/list_nested_assign.c:41:17: note: previous definition of ‘matrix’ with type ‘list_list_int’
   41 |   list_list_int matrix = {2, matrix_data};
      |                 ^~~~~~
