tests/machine/x/c/list_nested_assign.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
int _mochi_main() {
  list_int tmp1 = list_int_create(2);
  tmp1.data[0] = 1;
  tmp1.data[1] = 2;
  list_int tmp2 = list_int_create(2);
  tmp2.data[0] = 3;
  tmp2.data[1] = 4;
  list_int matrix_data[] = {{2, tmp1}, {2, tmp2}};
  list_list_int matrix = {2, matrix_data};
  list_list_int matrix = matrix;
  matrix.data[1].data[0] = 5;
  printf("%d\n", matrix.data[1].data[0]);
  return 0;
}
int main() { return _mochi_main(); }
